Fixed video covers download, added webpage previews and covers support on preview page

--- a/preview_static/style.css
+++ b/preview_static/style.css
@@ -155,6 +155,18 @@ a.block_link:hover {
 .message .userpic .initials {
     font-size: 16px;
 }
+.message .date {
+    position: relative;
+}
+.message .date .msg-id {
+    position: absolute;
+    right: 100%;
+    top: 0;
+    margin-right: 8px;
+}
+.message:not(:hover) .date .msg-id {
+    display: none;
+}
 .default {
     padding: 10px;
 }
